# openwbeui-clustering

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
configs/: default.yaml  smoke.yaml
src/: __init__.py  artifacts.py  cli.py  config.py  domain_flags.py  io_utils.py  logging_utils.py  metrics.py  pipeline.py  schemas.py
src/clients/: embedding_client.py  llm_client.py
src/stages/: ingest.py  llm_enrichment.py  preprocess.py  reporting.py  topic_model.py  unit_builder.py
tests/: helpers.py  test_clients.py  test_domain_flags.py  test_ingest.py  test_llm_client.py  test_llm_enrichment.py  test_pipeline_smoke.py  test_preprocess.py  test_topic_model.py  test_unit_builder.py
tests/fixtures/: sample_dialogs.csv
